# ledger-device-rust-sdk

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  link.ld  nanos.json  nanos_script.ld  nanosplus.json  nanosplus_script.ld  nanox.json  nanox_layout.ld  nanox_script.ld  rust-toolchain.toml  script.ld
.cargo/: config  config.toml  config2.toml
.github/: actionlint.yaml  copilot-instructions.md
.github/instructions/: rust.instructions.md
.github/workflows/: allow-only-develop-into-master.yml  build_all_apps.yml  build_with_current_nightly.yml  build_with_nightly.yml  check_csdk_build_parameters.yml  ci.yml  doc.yml  publish.yml  (+10 more)
binding_headers/: bindings.h  usbbindings.h
cargo-ledger/: Cargo.toml  README.md
cargo-ledger/custom_targets/: flex.json  nanos.json  nanosplus.json  stax.json
cargo-ledger/src/: main.rs  setup.rs  utils.rs
cargo-ledger/tests/valid/: Cargo.toml
cargo-ledger/tests/valid_outdated/: Cargo.toml
cargo-ledger/tests/valid_variant/: Cargo.toml
examples/: signature.rs
include_gif/: CHANGELOG.md  Cargo.toml  README.md
include_gif/src/: lib.rs
ledger_device_rust_sdk/: Cargo.toml  nanos.json
ledger_device_rust_sdk/src/: infos.rs  io.rs  nvm.rs
ledger_device_sdk/: CHANGELOG.md  Cargo.toml  README.md  build.rs  flex.json  link.ld  link_wrap.sh  nanos.json  nanos_layout.ld  nanosplus.json  nanosplus_layout.ld  nanox.json  nanox_layout.ld  stax.json
ledger_device_sdk/.cargo/: config.toml
ledger_device_sdk/examples/: config.toml  gadgets.rs  nbgl_action.rs  nbgl_address.rs  nbgl_address_review.rs  nbgl_advance_review.rs  nbgl_choice.rs  nbgl_confirm.rs  nbgl_generic_review.rs  nbgl_generic_settings.rs  nbgl_home.rs  nbgl_home_and_settings.rs  nbgl_keypad.rs  nbgl_navigable_content.rs  nbgl_review.rs  nbgl_review_extended.rs  nbgl_spinner.rs  nbgl_streaming_review.rs  pki.rs  review.rs  signature.rs  stax.rs  test_pki_load_nanosplus.apdu  tlv_dynamic_token.rs  tlv_generic.rs  tlv_trusted_name.rs
ledger_device_sdk/examples/apdu/: dynamic_token_apex_p.apdu  dynamic_token_flex.apdu  dynamic_token_nanosp.apdu  dynamic_token_nanox.apdu  dynamic_token_stax.apdu  test_pki_fail.apdu  test_pki_flex.apdu  test_pki_nanox.apdu  test_pki_stax.apdu  trusted_name_apex_p.apdu  trusted_name_flex.apdu  trusted_name_nanosp.apdu  trusted_name_nanox.apdu  trusted_name_stax.apdu
ledger_device_sdk/examples/nbgl_home_and_settings/: main.rs  settings.rs
ledger_device_sdk/src/: app_info.rs  ble.rs  bn.rs  ccid.rs  ecc.rs  hash.rs  hmac.rs  io.rs  io_callbacks.rs  io_legacy.rs  io_new.rs  lib.rs  libcall.rs  log.rs  math.rs  nbgl.rs  nbgl2.rs  nvm.rs  pki.rs  random.rs  screen.rs  seph.rs  testing.rs  tlv.rs  tlv_uc.rs  ui.rs  uxapp.rs
ledger_device_sdk/src/ecc/: edwards.rs  math.rs  montgomery.rs  stark.rs  weierstrass.rs
ledger_device_sdk/src/ecc/weierstrass/: stark.rs
ledger_device_sdk/src/hash/: blake2.rs  ripemd.rs  sha2.rs  sha3.rs
ledger_device_sdk/src/hmac/: ripemd.rs  sha2.rs
ledger_device_sdk/src/io_new/: bolos.rs  callbacks.rs  event.rs
ledger_device_sdk/src/libcall/: string.rs  swap.rs
ledger_device_sdk/src/nbgl/: nbgl_action.rs  nbgl_address_review.rs  nbgl_advance_review.rs  nbgl_choice.rs  nbgl_confirm.rs  nbgl_generic_review.rs  nbgl_generic_settings.rs  nbgl_home_and_settings.rs  nbgl_keypad.rs  nbgl_navigable_content.rs  nbgl_review.rs  nbgl_review_extended.rs  nbgl_review_status.rs  nbgl_spinner.rs  nbgl_status.rs  nbgl_streaming_review.rs
ledger_device_sdk/src/nbgl2/: nbgl2_home_and_settings.rs
ledger_device_sdk/src/tlv/: tlv_dynamic_token.rs  tlv_generic.rs  tlv_trusted_name.rs
ledger_device_sdk/src/tlv/tlv_generic/: tlv_core.rs
ledger_device_sdk/src/tlv_uc/: tlv_dynamic_token.rs  tlv_trusted_name.rs
ledger_device_sdk/src/ui/: bagls.rs  bitmaps.rs  gadgets.rs  layout.rs  screen_util.rs  string_mcu.rs  string_se.rs
ledger_device_sdk/src/ui/bagls/: mcu.rs  se.rs
ledger_device_sdk/src/ui/fonts/: opensans.rs
ledger_device_sdk/tests/: ecc_tests.rs
ledger_device_ui_sdk/: Cargo.toml  README.md
ledger_device_ui_sdk/.cargo/: config.toml
ledger_device_ui_sdk/examples/: gadgets.rs
ledger_device_ui_sdk/src/: bagls.rs  bitmaps.rs  fonts.rs  layout.rs  lib.rs  screen_util.rs  string_mcu.rs  string_se.rs  ui.rs
ledger_device_ui_sdk/src/bagls/: mcu.rs  se.rs
ledger_secure_sdk_sys/: CHANGELOG.md  Cargo.toml  README.md  apex_p.json  build.rs  c_sdk_build_flex.cflags  c_sdk_build_flex.defines  c_sdk_build_nanosplus.cflags  c_sdk_build_nanosplus.defines  c_sdk_build_nanox.cflags  c_sdk_build_nanox.defines  c_sdk_build_stax.cflags  c_sdk_build_stax.defines  csdk_flex.h  csdk_nanos.h  csdk_nanos2.h  csdk_nanox.h  csdk_stax.h  link.ld  nanos_layout.ld  sdk.h  sdk_flex.h  sdk_nanos.h  sdk_nanos2.h  sdk_nanosp.h  sdk_nanox.h  sdk_stax.h  stax.json
ledger_secure_sdk_sys/.cargo/: config.toml
ledger_secure_sdk_sys/devices/apex_p/: apex_p.json  c_sdk_build_apex_p.defines
ledger_secure_sdk_sys/devices/flex/: c_sdk_build_flex.defines  flex.json  flex_layout.ld
ledger_secure_sdk_sys/devices/nanosplus/: c_sdk_build_nanosplus.defines  nanosplus.json  nanosplus_layout.ld
ledger_secure_sdk_sys/devices/nanox/: c_sdk_build_nanox.cflags  c_sdk_build_nanox.defines  nanox.json  nanox_layout.ld
ledger_secure_sdk_sys/devices/stax/: c_sdk_build_stax.defines  stax.json
ledger_secure_sdk_sys/src/: buttons.rs  infos.rs  lib.rs  seph.rs
ledger_secure_sdk_sys/src/c/: glyphs.c  pic.s  src.c
ledger_secure_sdk_sys/src/c/glyphs_flex/: glyphs.c  glyphs.h
ledger_secure_sdk_sys/src/c/glyphs_flex_18/: glyphs.c  glyphs.h
ledger_secure_sdk_sys/src/c/glyphs_stax/: glyphs.c  glyphs.h
nanos-secure-sdk/: Makefile.defines  Makefile.rules  Makefile.rules_generic  icon3.py  script.ld
scripts/: link_wrap.sh
src/: bindings.rs  ble.rs  buttons.rs  ccid.rs  debug.rs  ecc.rs  hkdf.rs  infos.rs  io.rs  lib.rs  nvm.rs  plugin.rs  random.rs  screen.rs  seph.rs  starknet.rs  string.rs  syscalls_bindings.rs  testing.rs  usbbindings.rs  usbcorebindings.rs  uxapp.rs
testmacro/: Cargo.toml  README.md
testmacro/src/: lib.rs
(+242 files in other folders)
