[workspace]
members = [
	"ledger_device_sdk",
	"ledger_secure_sdk_sys",
	"include_gif",
	"testmacro",
	"cargo-ledger"
]
resolver = "2"

[workspace.package]
license = "Apache-2.0" 
description = "Ledger Device Rust SDK crates"
repository = "https://github.com/LedgerHQ/ledger-device-rust-sdk"
readme = "README.md"
authors = ["Ledger"]

[profile.release]
opt-level = 's'
lto = true