[package]
name = "include_gif"
version = "1.0.1"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "procedural macro that packs a gif image into a byte representation"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
gif = "0.11.3"
flate2 = "1.0.28"
