[package]
name = "include_gif"
version = "1.2.0"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "procedural macro that packs a gif image into a byte representation"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
flate2 = "1.0.28"
image = "=0.24.9"
