[package]
name = "ledger_device_sdk"
version = "1.30.0"
authors = ["yhql", "yogh333", "agrojean-ledger", "kingofpayne"]
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Ledger device Rust SDK"

[build-dependencies]
serde_json = "1.0"

[dev-dependencies]
# enable the 'speculos' feature when testing
# https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481
ledger_device_sdk = { path = ".", features = ["speculos"] }
testmacro = { path = "../testmacro"}

[dependencies]
include_gif = {path = "../include_gif", version = "1.2.4"}
num-traits = { version = "0.2.14", default-features = false }
rand_core = { version = "0.6.3", default-features = false }
zeroize = { version = "1.6.0", default-features = false }
numtoa = "0.2.4"
const-zero = "0.1.1"
ledger_secure_sdk_sys = { path = "../ledger_secure_sdk_sys", version = "1.13.0" }

[features]
debug = []
speculos = []
heap = [ "ledger_secure_sdk_sys/heap" ]
nano_nbgl = [ "ledger_secure_sdk_sys/nano_nbgl" ]
debug_csdk = [ "ledger_secure_sdk_sys/debug_csdk" ]
io_new = []  # switch to new 'io' module

# When enabled, this feature re-exports the `ledger_secure_sdk_sys` crate containing the
# Ledger C SDK bindings through the `sys` module. Use it to access low-level (unsafe) FFI
# functions, types, and constants directly from the underlying C SDK.
# It is preferred to not enable this feature if possible, using instead the safe
# abstractions in `ledger_device_sdk`, but it is provided for advanced use cases.
sys = []

default = [ "heap" ]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("apex_p", "stax", "flex", "nanox", "nanosplus"))']

[[example]]
name = "nbgl_action"
doc-scrape-examples = true

[[example]]
name = "nbgl_address_review"
doc-scrape-examples = true

[[example]]
name = "nbgl_advance_review"
doc-scrape-examples = true

[[example]]
name = "nbgl_choice"
doc-scrape-examples = true

[[example]]
name = "nbgl_generic_review"
doc-scrape-examples = true

[[example]]
name = "nbgl_generic_settings"
doc-scrape-examples = true

[[example]]
name = "nbgl_home_and_settings"
doc-scrape-examples = true

[[example]]
name = "nbgl_keypad"
doc-scrape-examples = true

[[example]]
name = "nbgl_review"
doc-scrape-examples = true

[[example]]
name = "nbgl_review_extended"
doc-scrape-examples = true

[[example]]
name = "nbgl_spinner"
doc-scrape-examples = true

[[example]]
name = "nbgl_streaming_review"
doc-scrape-examples = true

[[example]]
name = "pki"
doc-scrape-examples = true

[[example]]
name = "tlv_dynamic_token"
doc-scrape-examples = true

[[example]]
name = "tlv_generic"
doc-scrape-examples = true

[[example]]
name = "tlv_trusted_name"
doc-scrape-examples = true
