[package]
name = "ledger_device_ui_sdk"
version = "1.1.0"
authors = ["yhql"]
edition = "2021"
license.workspace = true
description = "Ledger devices abstractions for displaying text, icons, menus and other common gadgets to the screen"

[dependencies]
ledger_device_sdk = "1.0.0"
ledger_secure_sdk_sys = "1.0.0"
include_gif = "1.0.0"
numtoa = "0.2.4"

[features]
speculos = []

# This section is not necessary to build the package
# it is only used to be able to do 
# `cargo ledger build nanos -- --example gadgets`
[package.metadata.nanos]
curve = ["secp256k1"]
flags = "0"
icon = "ui_16x16.gif"
icon_small = "ui_14x14.gif"
path = [""]
