[package]
name = "testmacro"
version = "0.1.0"
authors = ["yhql <yhql@users.noreply.github.com>"]
edition = "2018"
license.workspace = true
repository.workspace = true
description = "procedural macro used to run unit and integration tests"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"